--- a/HomeKnits/Views/Products/Index.cshtml
+++ b/HomeKnits/Views/Products/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@model IEnumerable<HomeKnits.Models.Product>
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
 
 @{
     ViewData["Title"] = "Index";
@@ -6,9 +8,13 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
+
 <table class="table">
     <thead>
         <tr>
@@ -34,7 +40,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -42,8 +48,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImageUrl)
+            <td class="d-flex justify-content-center">
+                <img src="@Url.Content(item.ImageUrl)" alt="@item.Name" style="height: 150px" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Category)
@@ -55,9 +61,16 @@
                 @Html.DisplayFor(modelItem => item.Technique)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    @if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
+                    {
+                        <><a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |</>
+                    }
+                
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
+                    @if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
+                    {
+                                <>| <a asp-action="Delete" asp-route-id="@item.Id">Delete</a></>
+                    }
             </td>
         </tr>
 }
