--- a/HomeKnits/Views/Products/Details.cshtml
+++ b/HomeKnits/Views/Products/Details.cshtml
@@ -1,54 +1,57 @@
 ﻿@model HomeKnits.Models.Product
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@Html.DisplayFor(model => model.Name)</h1>
 
 <div>
-    <h4>Product</h4>
+    @*<h4>Product</h4>*@
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Colour)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Colour)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Technique)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Technique)
-        </dd>
-    </dl>
+    <div class="row">
+        <dl class="col-sm-6">
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Category)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Category)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Colour)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Colour)
+            </dd>
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.Technique)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.Technique)
+            </dd>
+        </dl>
+        <div class="col-sm-6 d-flex justify-content-center">
+            <img 
+                src="@Html.DisplayTextFor(model => model.ImageUrl)" 
+                alt="@Html.DisplayTextFor(model => model.Name)" 
+                style="height: 300px" />
+        </div>
+    </div>
+    
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    @if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
+    {
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
+    }
     <a asp-action="Index">Back to List</a>
 </div>
