--- a/HomeKnits/Views/Products/Index.cshtml
+++ b/HomeKnits/Views/Products/Index.cshtml
@@ -8,7 +8,9 @@
 
 <h1>Index</h1>
 
-@if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
+@if ((await AuthorizationService.AuthorizeAsync(
+    user: User, policyName: "Admin"
+)).Succeeded)
 {
     <p>
         <a asp-action="Create">Create New</a>
@@ -49,7 +51,10 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td class="d-flex justify-content-center">
-                <img src="@Url.Content(item.ImageUrl)" alt="@item.Name" style="height: 150px" />
+                    <img 
+                        src="@Html.DisplayTextFor(modelItem => item.ImageUrl)" 
+                        alt="@Html.DisplayTextFor(modelItem => item.Name)" 
+                        style="height: 150px" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Category)
