--- a/HomeKnits/Views/Products/Index.cshtml
+++ b/HomeKnits/Views/Products/Index.cshtml
@@ -8,9 +8,7 @@
 
 <h1>Index</h1>
 
-@if ((await AuthorizationService.AuthorizeAsync(
-    user: User, policyName: "Admin"
-)).Succeeded)
+@if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
 {
     <p>
         <a asp-action="Create">Create New</a>
@@ -68,13 +66,13 @@
             <td>
                     @if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
                     {
-                        <><a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |</>
+                        <div><a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |</div>
                     }
                 
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
                     @if ((await AuthorizationService.AuthorizeAsync(User, "Admin")).Succeeded)
                     {
-                                <>| <a asp-action="Delete" asp-route-id="@item.Id">Delete</a></>
+                                <div>| <a asp-action="Delete" asp-route-id="@item.Id">Delete</a></div>
                     }
             </td>
         </tr>
