--- a/HomeKnits/Views/Reviews/Delete.cshtml
+++ b/HomeKnits/Views/Reviews/Delete.cshtml
@@ -29,6 +29,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateCreated)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ProductId)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ProductId)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
