--- a/HomeKnits/Views/Reviews/Index.cshtml
+++ b/HomeKnits/Views/Reviews/Index.cshtml
@@ -21,6 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.DateCreated)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ProductId)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -35,6 +38,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DateCreated)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
