--- a/HomeKnits/Views/Reviews/Create.cshtml
+++ b/HomeKnits/Views/Reviews/Create.cshtml
@@ -13,21 +13,29 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ProductId" />
+            <input type="hidden" asp-for="DateCreated" class="form-control" />
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
-                <input asp-for="Rating" class="form-control" />
+                @Html.DropDownListFor(model => model.Rating, selectList: new List<SelectListItem>{
+                    new SelectListItem{Text =  "1", Value =  "1"},
+                new SelectListItem{Text =  "2", Value =  "2"},
+                new SelectListItem{Text =  "3", Value =  "3"},
+                new SelectListItem{Text =  "4", Value =  "4"},
+                new SelectListItem{Text =  "5", Value =  "5"},
+                })
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
-            <div class="form-group">
+
+            <div class="d-flex flex-column form-group">
                 <label asp-for="ReviewText" class="control-label"></label>
-                <input asp-for="ReviewText" class="form-control" />
+                @Html.TextAreaFor(model => model.ReviewText, new { style="height:200px" })
                 <span asp-validation-for="ReviewText" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
-                <span asp-validation-for="DateCreated" class="text-danger"></span>
+                
             </div>
+
+            <hr/>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
